objects/SupplierCategory__c.object
<CustomObject>
    <description>Supplier Category</description>
    <fields>
        <fullName>Actual_Spent__c</fullName>
        <description>Actual Spent</description>
        <inlineHelpText>Actual Spent</inlineHelpText>
        <label>Actual Spent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Realized_Savings__c</fullName>
        <description>Realized Savings</description>
        <inlineHelpText>Realized Savings</inlineHelpText>
        <label>Realized Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubCategory__c</fullName>
        <description>SubCategory</description>
        <inlineHelpText>SubCatego</inlineHelpText>
        <label>SubCategory</label>
        <referenceTo>SubCategory__c</referenceTo>
        <relationshipLabel>SupplierCategories</relationshipLabel>
        <relationshipName>SupplierCategories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <description>Supplier</description>
        <inlineHelpText>Supplier</inlineHelpText>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>SupplierCategories</relationshipLabel>
        <relationshipName>SupplierCategories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SupplierCategory</label>
    <nameField>
        <displayFormat>SCT-{000000}</displayFormat>
        <label>SuppCatNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SupplierCategories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>